# zed-mcp-server-redmine

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  extension.toml  package.json  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: api-coverage.md  client-configuration.md  client-configuration.zh-CN.md
scripts/: check.sh  install-local.sh  package-release.sh
server/: index.js
server/src/: redmine.js  tools.js
src/: lib.rs
test/: redmine.test.js
